--- a/docs/examples/deployment-rollout/app-source.yaml
+++ b/docs/examples/deployment-rollout/app-source.yaml
@@ -2,6 +2,8 @@ apiVersion: core.oam.dev/v1beta1
 kind: Application
 metadata:
   name: test-rolling
+  annotations:
+    "app.oam.dev/rollout-template": "true"
 spec:
   components:
     - name: metrics-provider
@@ -12,4 +14,3 @@ spec:
           - stress-cpu=1
         image: stefanprodan/podinfo:4.0.6
         port: 8080
-        updateStrategyType: InPlaceIfPossible
