--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_traitdefinitions.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_traitdefinitions.yaml
@@ -193,6 +193,21 @@ spec:
             configMapRef:
               description: ConfigMapRef refer to a ConfigMap which contains OpenAPI V3 JSON schema of Component parameters.
               type: string
+            latestRevision:
+              description: LatestRevision of the component definition
+              properties:
+                name:
+                  type: string
+                revision:
+                  format: int64
+                  type: integer
+                revisionHash:
+                  description: RevisionHash record the hash value of the spec of ApplicationRevision object.
+                  type: string
+              required:
+              - name
+              - revision
+              type: object
           type: object
       type: object
   version: v1alpha2
