WIP refactor rollout reconcile
add construct func for reconcile

refactor application  event

WIP fix failed test

fix event reason

delete useless yaml

fix samll issue

add more test

fix more test

add e2e test and extract rollout plan from appRevision

extract inline appRollout status from appStatus

--- a/charts/vela-core/crds/core.oam.dev_applications.yaml
+++ b/charts/vela-core/crds/core.oam.dev_applications.yaml
@@ -325,9 +325,6 @@ spec:
           status:
             description: AppStatus defines the observed state of Application
             properties:
-              batchRollingState:
-                description: BatchRollingState only meaningful when the Status is rolling
-                type: string
               components:
                 description: Components record the related Components created by Application Controller
                 items:
@@ -379,13 +376,6 @@ spec:
                   - type
                   type: object
                 type: array
-              currentBatch:
-                description: The current batch the rollout is working on/blocked it starts from 0
-                format: int32
-                type: integer
-              lastAppliedPodTemplateIdentifier:
-                description: lastAppliedPodTemplateIdentifier is a string that uniquely represent the last pod template each workload type could use different ways to identify that so we cannot compare between resources We update this field only after a successful rollout
-                type: string
               latestRevision:
                 description: LatestRevision of the application configuration it generates
                 properties:
@@ -421,17 +411,82 @@ spec:
                 - kind
                 - name
                 type: object
-              rollingState:
-                description: RollingState is the Rollout State
-                type: string
-              rolloutOriginalSize:
-                description: RolloutTargetSize is the size of the target resources. This is determined once the initial spec verification and does not change until the rollout is restarted
-                format: int32
-                type: integer
-              rolloutTargetSize:
-                description: RolloutTargetSize is the size of the target resources. This is determined once the initial spec verification and does not change until the rollout is restarted
-                format: int32
-                type: integer
+              rollout:
+                description: AppRolloutStatus defines the observed state of AppRollout
+                properties:
+                  LastSourceAppRevision:
+                    description: LastSourceAppRevision contains the name of the app that we need to upgrade from. We will restart the rollout if this is not the same as the spec
+                    type: string
+                  batchRollingState:
+                    description: BatchRollingState only meaningful when the Status is rolling
+                    type: string
+                  conditions:
+                    description: Conditions of the resource.
+                    items:
+                      description: A Condition that may apply to a resource.
+                      properties:
+                        lastTransitionTime:
+                          description: LastTransitionTime is the last time this condition transitioned from one status to another.
+                          format: date-time
+                          type: string
+                        message:
+                          description: A Message containing details about this condition's last transition from one status to another, if any.
+                          type: string
+                        reason:
+                          description: A Reason for this condition's last transition from one status to another.
+                          type: string
+                        status:
+                          description: Status of this condition; is it currently True, False, or Unknown?
+                          type: string
+                        type:
+                          description: Type of this condition. At most one of each condition type may apply to a resource at any point in time.
+                          type: string
+                      required:
+                      - lastTransitionTime
+                      - reason
+                      - status
+                      - type
+                      type: object
+                    type: array
+                  currentBatch:
+                    description: The current batch the rollout is working on/blocked it starts from 0
+                    format: int32
+                    type: integer
+                  lastAppliedPodTemplateIdentifier:
+                    description: lastAppliedPodTemplateIdentifier is a string that uniquely represent the last pod template each workload type could use different ways to identify that so we cannot compare between resources We update this field only after a successful rollout
+                    type: string
+                  lastTargetAppRevision:
+                    description: LastUpgradedTargetAppRevision contains the name of the app that we upgraded to We will restart the rollout if this is not the same as the spec
+                    type: string
+                  rollingState:
+                    description: RollingState is the Rollout State
+                    type: string
+                  rolloutOriginalSize:
+                    description: RolloutTargetSize is the size of the target resources. This is determined once the initial spec verification and does not change until the rollout is restarted
+                    format: int32
+                    type: integer
+                  rolloutTargetSize:
+                    description: RolloutTargetSize is the size of the target resources. This is determined once the initial spec verification and does not change until the rollout is restarted
+                    format: int32
+                    type: integer
+                  targetGeneration:
+                    description: NewPodTemplateIdentifier is a string that uniquely represent the new pod template each workload type could use different ways to identify that so we cannot compare between resources
+                    type: string
+                  upgradedReadyReplicas:
+                    description: UpgradedReadyReplicas is the number of Pods upgraded by the rollout controller that have a Ready Condition.
+                    format: int32
+                    type: integer
+                  upgradedReplicas:
+                    description: UpgradedReplicas is the number of Pods upgraded by the rollout controller
+                    format: int32
+                    type: integer
+                required:
+                - currentBatch
+                - lastTargetAppRevision
+                - rollingState
+                - upgradedReadyReplicas
+                - upgradedReplicas
+                type: object
               services:
                 description: Services record the status of the application services
                 items:
@@ -499,22 +554,6 @@ spec:
               status:
                 description: ApplicationPhase is a label for the condition of a application at the current time
                 type: string
-              targetGeneration:
-                description: NewPodTemplateIdentifier is a string that uniquely represent the new pod template each workload type could use different ways to identify that so we cannot compare between resources
-                type: string
-              upgradedReadyReplicas:
-                description: UpgradedReadyReplicas is the number of Pods upgraded by the rollout controller that have a Ready Condition.
-                format: int32
-                type: integer
-              upgradedReplicas:
-                description: UpgradedReplicas is the number of Pods upgraded by the rollout controller
-                format: int32
-                type: integer
-            required:
-            - currentBatch
-            - rollingState
-            - upgradedReadyReplicas
-            - upgradedReplicas
             type: object
         type: object
     served: true
@@ -816,9 +855,6 @@ spec:
           status:
             description: AppStatus defines the observed state of Application
             properties:
-              batchRollingState:
-                description: BatchRollingState only meaningful when the Status is rolling
-                type: string
               components:
                 description: Components record the related Components created by Application Controller
                 items:
@@ -870,13 +906,6 @@ spec:
                   - type
                   type: object
                 type: array
-              currentBatch:
-                description: The current batch the rollout is working on/blocked it starts from 0
-                format: int32
-                type: integer
-              lastAppliedPodTemplateIdentifier:
-                description: lastAppliedPodTemplateIdentifier is a string that uniquely represent the last pod template each workload type could use different ways to identify that so we cannot compare between resources We update this field only after a successful rollout
-                type: string
               latestRevision:
                 description: LatestRevision of the application configuration it generates
                 properties:
@@ -912,17 +941,82 @@ spec:
                 - kind
                 - name
                 type: object
-              rollingState:
-                description: RollingState is the Rollout State
-                type: string
-              rolloutOriginalSize:
-                description: RolloutTargetSize is the size of the target resources. This is determined once the initial spec verification and does not change until the rollout is restarted
-                format: int32
-                type: integer
-              rolloutTargetSize:
-                description: RolloutTargetSize is the size of the target resources. This is determined once the initial spec verification and does not change until the rollout is restarted
-                format: int32
-                type: integer
+              rollout:
+                description: AppRolloutStatus defines the observed state of AppRollout
+                properties:
+                  LastSourceAppRevision:
+                    description: LastSourceAppRevision contains the name of the app that we need to upgrade from. We will restart the rollout if this is not the same as the spec
+                    type: string
+                  batchRollingState:
+                    description: BatchRollingState only meaningful when the Status is rolling
+                    type: string
+                  conditions:
+                    description: Conditions of the resource.
+                    items:
+                      description: A Condition that may apply to a resource.
+                      properties:
+                        lastTransitionTime:
+                          description: LastTransitionTime is the last time this condition transitioned from one status to another.
+                          format: date-time
+                          type: string
+                        message:
+                          description: A Message containing details about this condition's last transition from one status to another, if any.
+                          type: string
+                        reason:
+                          description: A Reason for this condition's last transition from one status to another.
+                          type: string
+                        status:
+                          description: Status of this condition; is it currently True, False, or Unknown?
+                          type: string
+                        type:
+                          description: Type of this condition. At most one of each condition type may apply to a resource at any point in time.
+                          type: string
+                      required:
+                      - lastTransitionTime
+                      - reason
+                      - status
+                      - type
+                      type: object
+                    type: array
+                  currentBatch:
+                    description: The current batch the rollout is working on/blocked it starts from 0
+                    format: int32
+                    type: integer
+                  lastAppliedPodTemplateIdentifier:
+                    description: lastAppliedPodTemplateIdentifier is a string that uniquely represent the last pod template each workload type could use different ways to identify that so we cannot compare between resources We update this field only after a successful rollout
+                    type: string
+                  lastTargetAppRevision:
+                    description: LastUpgradedTargetAppRevision contains the name of the app that we upgraded to We will restart the rollout if this is not the same as the spec
+                    type: string
+                  rollingState:
+                    description: RollingState is the Rollout State
+                    type: string
+                  rolloutOriginalSize:
+                    description: RolloutTargetSize is the size of the target resources. This is determined once the initial spec verification and does not change until the rollout is restarted
+                    format: int32
+                    type: integer
+                  rolloutTargetSize:
+                    description: RolloutTargetSize is the size of the target resources. This is determined once the initial spec verification and does not change until the rollout is restarted
+                    format: int32
+                    type: integer
+                  targetGeneration:
+                    description: NewPodTemplateIdentifier is a string that uniquely represent the new pod template each workload type could use different ways to identify that so we cannot compare between resources
+                    type: string
+                  upgradedReadyReplicas:
+                    description: UpgradedReadyReplicas is the number of Pods upgraded by the rollout controller that have a Ready Condition.
+                    format: int32
+                    type: integer
+                  upgradedReplicas:
+                    description: UpgradedReplicas is the number of Pods upgraded by the rollout controller
+                    format: int32
+                    type: integer
+                required:
+                - currentBatch
+                - lastTargetAppRevision
+                - rollingState
+                - upgradedReadyReplicas
+                - upgradedReplicas
+                type: object
               services:
                 description: Services record the status of the application services
                 items:
@@ -990,22 +1084,6 @@ spec:
               status:
                 description: ApplicationPhase is a label for the condition of a application at the current time
                 type: string
-              targetGeneration:
-                description: NewPodTemplateIdentifier is a string that uniquely represent the new pod template each workload type could use different ways to identify that so we cannot compare between resources
-                type: string
-              upgradedReadyReplicas:
-                description: UpgradedReadyReplicas is the number of Pods upgraded by the rollout controller that have a Ready Condition.
-                format: int32
-                type: integer
-              upgradedReplicas:
-                description: UpgradedReplicas is the number of Pods upgraded by the rollout controller
-                format: int32
-                type: integer
-            required:
-            - currentBatch
-            - rollingState
-            - upgradedReadyReplicas
-            - upgradedReplicas
             type: object
         type: object
     served: true
