--- a/charts/vela-core/templates/kubevela-controller.yaml
+++ b/charts/vela-core/templates/kubevela-controller.yaml
@@ -122,6 +122,7 @@ spec:
             {{ end }}
             - "--system-definition-namespace={{ .Values.systemDefinitionNamespace }}"
             - "--application-revision-limit={{ .Values.applicationRevisionLimit }}"
+            - "--definition-revision-limit={{ .Values.definitionRevisionLimit }}"
           image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
           imagePullPolicy: {{ quote .Values.image.pullPolicy }}
           resources:
