Check whether parameter.cmd is nill for sidecar trait

--- a/charts/vela-core/templates/defwithtemplate/sidecar.yaml
+++ b/charts/vela-core/templates/defwithtemplate/sidecar.yaml
@@ -16,9 +16,11 @@ spec:
         patch: {
         	// +patchKey=name
         	spec: template: spec: containers: [{
-        		name:    parameter.name
-        		image:   parameter.image
-        		command: parameter.cmd
+        		name:  parameter.name
+        		image: parameter.image
+        		if parameter.cmd != _|_ {
+        			command: parameter.cmd
+        		}
         		if parameter["volumes"] != _|_ {
         			volumeMounts: [ for v in parameter.volumes {
         				{
