--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -274,6 +274,9 @@ jobs:
       - name: Check code formatting
         run: go install golang.org/x/tools/cmd/goimports && make fmt
 
+      - name: Run make reviewable
+        run: make reviewable
+
       - name: Check Diff
         run: make check-diff
 
